# keith-core

app/: brave_settings_strings.grdp
browser/: brave_content_browser_client.cc  browser_context_keyed_service_factories.cc
browser/ai_chat/lm_studio/: BUILD.gn  lm_studio_service_factory.cc  lm_studio_service_factory.h
browser/extensions/api/settings_private/: brave_prefs_util.cc
browser/resources/settings/: sources.gni
browser/resources/settings/brave_leo_assistant_page/: brave_leo_assistant_browser_proxy.ts  model_list_section.html  model_list_section.ts
browser/ui/: BUILD.gn
browser/ui/webui/: brave_settings_ui.cc  brave_settings_ui.h
browser/ui/webui/ai_chat/: BUILD.gn
browser/ui/webui/settings/: brave_settings_localized_strings_provider.cc
components/: BUILD.gn
components/ai_chat/core/browser/lm_studio/: BUILD.gn  lm_studio_model_fetcher.cc  lm_studio_model_fetcher.h  lm_studio_model_fetcher_unittest.cc  lm_studio_service.cc  lm_studio_service.h  lm_studio_service_unittest.cc
components/ai_chat/core/common/: pref_names.cc  pref_names.h
components/ai_chat/core/common/mojom/: BUILD.gn  lm_studio.mojom
components/ai_chat/resources/common/: constants.ts  mojom.ts
components/ai_chat/resources/page/components/model_menu_item/: model_menu_item.tsx
ui/webui/resources/: BUILD.gn
