# Copyright (c) 2026 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

static_library("lm_studio") {
  visibility = [
    ":unit_tests",
    "//brave/browser/ai_chat/lm_studio",
    "//brave/browser/ui",
    "//brave/browser/ui/webui/ai_chat",
  ]

  sources = [
    "lm_studio_model_fetcher.cc",
    "lm_studio_model_fetcher.h",
    "lm_studio_service.cc",
    "lm_studio_service.h",
  ]

  deps = [
    "//base",
    "//brave/components/ai_chat/core/browser",
    "//brave/components/ai_chat/core/common",
    "//brave/components/ai_chat/core/common/mojom",
    "//components/keyed_service/core",
    "//components/prefs",
    "//mojo/public/cpp/bindings",
    "//net/traffic_annotation",
    "//services/network/public/cpp",
    "//url",
  ]

  public_deps = [ "//base" ]
}

source_set("unit_tests") {
  testonly = true
  sources = [
    "lm_studio_model_fetcher_unittest.cc",
    "lm_studio_service_unittest.cc",
  ]

  deps = [
    ":lm_studio",
    "//base/test:test_support",
    "//brave/components/ai_chat/core/browser",
    "//brave/components/ai_chat/core/common",
    "//brave/components/ai_chat/core/common/mojom",
    "//components/os_crypt/async/browser",
    "//components/os_crypt/async/browser:test_support",
    "//components/sync_preferences:test_support",
    "//services/network:test_support",
    "//services/network/public/cpp",
    "//testing/gtest",
  ]
}
